# strawman

./: .gitignore  CHANGELOG.md  NEW_IN_THIS_RELEASE.md  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: main.yml  publish.yml  quality.yml
docs/: conf.py  index.md  index.rst
docs/source/: apidoc.rst  installation.rst
src/strawman/: __init__.py  dummy_pandas.py  utils.py
strawman/: __init__.py  dummy_pandas.py  utils.py
tests/: test_dummy_df.py  test_utils.py
