[tool.poetry]
name = "strawman"
version = "0.1.1"
description = "Library for simple dummy objects"
authors = ["Daniel Obraczka <obraczka@informatik.uni-leipzig.de>"]
license = "MIT"
readme = "README.md"
keywords = ["prototyping"]
classifiers = ["Development Status :: 4 - Beta", "Programming Language :: Python", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3 :: Only", "Topic :: Scientific/Engineering","Topic :: Utilities"]
repository = "https://github.com/dobraczka/strawman"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dobraczka/strawman/issues"
"Source" = "https://github.com/dobraczka/strawman"
"Documentation" = "https://strawman.readthedocs.io"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pandas = "^1.3.0"
numpy = "^1.17.3"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
mypy = "^0.960"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pyproject-flake8 = "^0.0.1a4"
flake8-eradicate = "^1.2.1"
flake8-isort = "^4.1.1"
flake8-debugger = "^4.1.2"
flake8-comprehensions = "^3.10.0"
flake8-print = "^5.0.0"
nox-poetry = "^1.0.0"
black = "^22.3.0"
pytest-mock = "^3.7.0"
pyroma = "^4.1"
xdoctest = "^1.1.0"
pydocstyle = "^6.1.1"
flake8-bugbear = "^22.7.1"
darglint = "^1.8.1"
Sphinx = "^5.0.0"
insegel = "^1.3.1"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = "E203, E266, E501, W503, F403, F401, C408, D107"
max-line-length = 88
max-complexity = 18
count = "true"
show-source = "true"
statistics = "true"
strictness = "short"
docstring_style = "sphinx"
per-file-ignores = "tests/*: DAR002"

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
reverse_relative = true


[tool.cruft]
skip = ["strawman/__init__.py", "tests/", "README.md", "docs/", "pyproject.toml"]
